# aura-lang

./: .gitignore  ADVANCED_TEST_GENERATION_REPORT.md  AURA_RUN_READY.txt  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DESIGN.md  GENERATION_SUMMARY.txt  GITHUB_README.txt  NEXT_STEPS.md  ORGANIZATION_STATUS.txt  PROJECT_SUMMARY.md  README.md  RUN_COMMAND.md  TYPES.md  advanced_out.py  aura  aura_cli.py  control_flow_out.py  debug_coll.py  debug_filter.py  debug_hang.py  debug_recur.py  debug_tokenizer.py  debug_transpile.py  debug_transpiler.py  func_out.py  main.py  push-to-github.sh  pyproject.toml
docs/: AEP-001_Zen_of_Aura.md  FEATURE_VERIFICATION.md  GITHUB_QUICK.md  GITHUB_SETUP.md  GITHUB_SUCCESS.md  INDEX.md  LANGUAGE_GUIDE.md  ORGANIZATION_SUMMARY.md  README.md  aura.md  errors.md  functional.md  rules.md
examples/: README.md  advanced.aura  class_counter.aura  comprehensive.aura  control_flow.aura  dict_ops.aura  factorial.aura  fibonacci.aura  functions_and_classes.aura  guessing_game.aura  hello.aura  list_ops.aura  pattern_matching.aura  prime_checker.aura  sum_average.aura  test.aura  test_oop.aura
parser/: README.md  aura.g4  to_ast.py
repl/: engine.py
src/: __init__.py
stdlib/: README.md  __init__.py  collections.py  itertools.py  math.py  string.py
tests/: ANALYSIS_RESULTS.json  test_comprehensive.py  test_errors.py  test_features.py  test_massive_aura_files.py  test_massive_aura_v2.py  test_massive_generated.py  test_massive_stress.py  test_parser_errors.py  test_parser_expressions.py  test_parser_statements.py  test_repl.py  (+3 more)
(+5440 files in other folders)
