[tool.poetry]
name = "aura-transpiler"
version = "0.1.0"
description = "Phase 1: Foundation for the Aura language transpiler"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
antlr4-python3-runtime = "^4.11"

[tool.poetry.scripts]
aura = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
